--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,8 +22,8 @@ jobs:
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v3
 
-      - name: Build Debug APK
-        run: gradle assembleDebug
+      - name: Build Debug APK (app module)
+        run: gradle :app:assembleDebug
 
       - name: Upload APK as Artifact
         uses: actions/upload-artifact@v4
