--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.application' version '8.5.0' apply false
 }
+
+apply plugin: 'com.android.application'
 
 android {
     namespace 'com.presstv.player'
@@ -17,7 +19,13 @@ android {
     buildTypes {
         release {
             minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 }
 
