--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,4 @@
-buildscript {
-    repositories {
-        google()
-        mavenCentral()
-    }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:8.5.0'
-    }
-}
-
+// build.gradle (root)
 allprojects {
     repositories {
         google()
