--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,13 @@
-// build.gradle (root)
+buildscript {
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:8.5.0'
+    }
+}
+
 allprojects {
     repositories {
         google()
